fix: admin horizontal overflow

--- a/assets/admin/css/custom.css
+++ b/assets/admin/css/custom.css
@@ -778,14 +778,8 @@
 
 
 .table-responsive.datatable-custom {
-    overflow-x: hidden;
+    overflow-x: auto;
     -webkit-overflow-scrolling: touch;
-}
-
-@media (max-width: 1650px) {
-    .table-responsive.datatable-custom {
-        overflow-x: auto;
-    }
 }
 
 /*end datatable*/
